@@ -4,7 +4,9 @@
 
 // tag::changelog[]
 === Features
-* https://github.com/ysb33r/grolifant/issues/5[#8] - Provides `AbstractToolExecTask`, `ResolvedExecutable`
+* https://github.com/ysb33r/grolifant/issues/5[#8] - Provides `AbstractToolExecTask`, ``ResolvedExecutable`
+* New `ClosureUtils` class to help dealing with common Closure use cases in Gradle plugins such as configuration.
+* New `MapUtils` class to help dealing with property maps such as lazy evaluation of values.
 
 // end::changelog[]
 
